<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Add Numbers</string>
    <string name="action_settings">Settings</string>
    <string name="be_nice_man">BE NICE MAN</string>
    <string name="be_nice_man_be">BE</string>
    <string name="be_nice_man_nice">NICE</string>
    <string name="be_nice_man_man">MAN</string>
    <string name="ben_iceman">BEN ICEMAN</string>
    <string name="ben_iceman_base_url">http://www.beniceman.com/</string>
    <string name="ben_iceman_login_service">common/process_login.php</string>
    <string name="ben_iceman_change_password_service">service/changepwd.php</string>
    <string name="ben_iceman_set_result_service">service/setresult.php</string>
    <string name="dummy_button">Try It!</string>
    <string name="dummy_content">Be Nice Man</string>
    <string name="clear_button">Clear</string>
    <string name="clear_x">X</string>
    <string name="title_computation">Add The Numbers</string>
    <string name="your_score">Your Score:</string>
    <string name="answer">Answer:</string>
    <string name="hintanswer">Your Answer</string>
    <string name="hintanswerlong">Enter your Answer</string>
    <string name="problem">18 + 24</string>
    <string name="first">18</string>
    <string name="operator">+</string>
    <string name="second">24</string>
    <string name="score">0</string>
    <string name="enter">Enter</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="low_number">1</string>
    <string name="high_number">120</string>
    <string name="title_activity_usersetting">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="pref_user_name">Set user name</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_user_password">Set password</string>
    <string name="pref_user_password_summary">Set your password</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="title_activity_about">About Ben Iceman</string>
    <string name="aboutlink">http://www.beniceman.com</string>
    
</resources>
