<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Splash" >

    <TextView
        android:id="@+id/textViewBe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp"
        android:text="@string/be_nice_man_be"
        android:textColor="#33b5e5"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/textViewNice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewBe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/be_nice_man_nice"
        android:textColor="#33b5e5"
        android:textSize="45sp"
        />
    
    <TextView
        android:id="@+id/textViewMan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewNice"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/be_nice_man_man"
        android:textColor="#33b5e5"
        android:textSize="45sp" />

</RelativeLayout>